style.css
/*
Theme name: TwentySeventeen Child Theme
Theme URI: https://wordpress.org/themes/twentyseventeen/
Description: A child theme of Wordpress TwentySeventeen adapted for GEM UK
Author: Alex Jacobsen
Author URI: ajacobsen@gemission.org.uk
Template: twentyseventeen
Version: 0.1.0
*/
@import url("../twentyseventeen/style.css");
@import url("https://fonts.googleapis.com/css?family=Montserrat:200,300,400,600, 800, 900");
/*-----------------------------------------------------------------------------
1.0 Root Variables and body text
-----------------------------------------------------------------------------*/
/* little comment no. 3 */
body {
  font-family: 'Montserrat', sans-serif;
  font-weight: 200;
  line-height: 1.9; }

h2 {
  font-size: 2.5em;
  font-weight: 700; }

@media screen and (min-width: 30em) {
  h2 {
    font-size: 2.5em; } }

.h2--less-margin {
  margin-bottom: 10px; }

/*-----------------------------------------------------------------------------
2.0 Front Page Header & Site Branding Area
-----------------------------------------------------------------------------*/
/* reset custom-header-media pseudo element HEIGHT from parent style.css */
@media screen and (min-width: 48em){
  .twentyseventeen-front-page.has-header-image .custom-header-media:before {
    height: 100%
  }
}

/* Show main header only on home page */
.site-branding {
  display: none; }

.has-header-image.twentyseventeen-front-page .custom-header {
  height: 100vh;
  }

.home .site-branding {
  display: inherit;
  background: rgba(0, 0, 0, 0.50196);
  text-align: center;
  }

.has-header-image.twentyseventeen-front-page .site-branding {
  vertical-align: middle;
  }

@media screen and (min-width: 56em) {
  .has-header-image.twentyseventeen-front-page .site-branding {
    vertical-align: bottom; } }

@media screen and (min-width: 856px) {
  .site-branding .wrap {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    margin-top: 40px; } }

@media screen and (min-width: 48em) {
  .site-branding .wrap {
    padding-left: 0;
    padding-right: 0;
  }
}

@media screen and (min-width: 48em) {
  .has-header-image.twentyseventeen-front-page .site-branding {
    top: 0;
    } }

/* -----------Search Bar & Widget------------*/
/* Top widget will only display at screen width 56em, otherwise search widget
  is shown under site description text */
#search-widget-top {
  display: none; }

#search-widget-bottom {
  width: 100%;
  /* padding: 1em; */
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  }

input[type="search"] {
  width: 160px;
  height: 36px;
  padding: 0 0 0 10px;
  background: #fff;
  color: #86aa49;
  border-radius: 1.5em;
  -webkit-transition: width .5s ease-in-out;
  transition: width .5s ease-in-out; }

input[type="search"]:focus {
  color: #86aa49;
  border: none;
  -webkit-box-shadow: inset 1px 1px 5px #86aa49;
          box-shadow: inset 1px 1px 5px #86aa49;
  width: 300px;
  -webkit-transition: width .5s ease-in-out;
  transition: width .5s ease-in-out; }

::-webkit-input-placeholder {
  color: #86aa49;
  font-weight: 400; }

::-ms-input-placeholder {
  color: #86aa49;
  font-weight: 400; }

::placeholder {
  color: #86aa49;
  font-weight: 400; }

.search-widget button {
  background-color: rgba(34, 34, 34, 0); }

.search-form .search-submit {
  background-color: rgba(34, 34, 34, 0); }

.search-form label {
  margin-bottom: 0px; }

@media screen and (min-width: 856px) {
  #search-widget-top {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: end;
        -ms-flex-pack: end;
            justify-content: flex-end;
    margin: 0; } }

@media screen and (min-width: 1000px) {
  #search-widget-top {
    margin: 0; } }

@media screen and (min-width: 856px) {
  #search-widget-bottom {
    display: none; } }

@media screen and (min-width: 56em) {
  input[type="search"] {
    width: 150px; } }

.search-form .search-submit {
  bottom: 0px;
  padding: 0.5em 0.5em;
  position: absolute;
  right: 3px;
  top: -3px; }

.search-form .search-submit .icon {
  height: 20px;
  top: 0px;
  width: 20px; }

/* -----------Main GEM Logo------------*/
/* Animation */
@-webkit-keyframes slide-title {
  0% {
    left: 500px; }
  100% {
    left: 0px; } }
@keyframes slide-title {
  0% {
    left: 500px; }
  100% {
    left: 0px; } }

@-webkit-keyframes draw-border {
  0% {
    height: 0%; }
  100% {
    height: 100%; } }

@keyframes draw-border {
  0% {
    height: 0%; }
  100% {
    height: 100%; } }

.masthead-image-container {
  padding: 0;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  position: relative; }

@media screen and (min-width: 856px) {
  .masthead-image-container {
    overflow: hidden;
    width: 800px;
    -webkit-box-pack: end;
        -ms-flex-pack: end;
            justify-content: flex-end; } }

@media screen and (min-width: 856px) {
  .masthead-image-container::after {
    content: "";
    height: 0%;
    position: absolute;
    width: 5px;
    background-color: #fff;
    right: 0px;
    -webkit-animation: draw-border .5s;
            animation: draw-border .5s;
    -webkit-animation-fill-mode: forwards;
            animation-fill-mode: forwards;
    -webkit-animation-delay: 1s;
            animation-delay: 1s; } }

#gem-logo {
  width: 50vw; }

@media screen and (min-width: 856px) {
  #gem-logo {
    position: relative;
    top: 0;
    left: 1000px;
    width: 28vw;
    margin-bottom: 0px;
    margin-right: 24px;
    -webkit-animation: slide-title 1s ease-out;
            animation: slide-title 1s ease-out;
    -webkit-animation-fill-mode: forwards;
            animation-fill-mode: forwards;
    -webkit-animation-delay: 2s;
            animation-delay: 2s; } }
/* ... */

